packages/svelte/tests/compiler-errors/samples/css-global-block-combinator/main.svelte
<style>
	/* ok */
	.x :global {
	}

	/* not ok */
	.x > :global {
	}
</style>
